--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     font-family: 'Inter', system-ui;
     color: #243e63;
 }
+.nav__logo {
+     border-radius: 1px;
+    width: 6px;
+    height: 6px;
+    color: rgb(35, 2, 35);
+}
 
 body {
     max-width: 100vw;
