--- a/style.css
+++ b/style.css
@@ -76,7 +76,13 @@ nav {
 .btn__menu {
     display: none;
     background: transparent;
-    border: none;
+    border: 1px solid transparent;
+    cursor: pointer;
+}
+
+.btn__menu--svg {
+    width: 32px;
+    height: 32px;
     transition: all 300ms ease;
 }
 
@@ -138,6 +144,13 @@ nav {
     position: fixed;
     top: 24px;
     right: 18px;
+    background-color: greenyellow;
+    border: none;
+    transition: all 300ms ease;
+}
+
+.btn__menu--close:hover {
+    filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
 }
 
 
